# xfce4-panel-news-ticker-plugin

./: .gitignore  Cargo.toml  README.md  build.rs  make-debug.sh  requirements.txt
python-example/: meson.build
resources/: newstickerplugin.desktop  plugin.desktop
rust-rss-example/: install.sh  make.sh  newstickerplugin.desktop
rust-rss-example/src/ui/: about_dialog.rs  panel_box.rs  panel_icon.rs
rust-rss-example/src/xfce/: plugin.rs
src/: app.rs  config.rs  feed.rs  gui.rs  lib.rs  main.txt  plugin.c  plugin.h  plugin.py  test.c
src/res/: icon.rs  mod.rs
src/ui/: about_dialog.rs  config_dialog.rs  feed_dialog.rs  mod.rs  ticker.rs
src/ui/glade/: configuration.glade
src/xfce/: rc.rs
tmp/tickr-0.7.1/: AUTHORS  ChangeLog  Makefile.in  README  README_GTK3  TODO  build-on-win32  config.h.in  configure  configure.ac  tickr-feed-list.opml  tickr-url-list  tickr.1  tickr.desktop
tmp/tickr-0.7.1/doc/: HOWTO_log_to_output_and_file  widgets_packing
tmp/tickr-0.7.1/doc/feed_formats/: atom.xml  rss10.xml  rss20.xml
tmp/tickr-0.7.1/glib-2.26.0-win32-patch/: README_glib_patch  glib-2.26.0-win32-mmtimer.diff  run_diff  run_patch
tmp/tickr-0.7.1/glib-2.26.0-win32-patch/test/: Makefile  test.c
tmp/tickr-0.7.1/images/: tickr-icon.xpm
tmp/tickr-0.7.1/src/: Makefile.am  Makefile.in
tmp/tickr-0.7.1/src/libetm-0.5.0/: ChangeLog  Makefile-libetm-linux  Makefile-libetm-win32  Makefile.am  Makefile.in  README  TODO  error.c  error.h  error_handler_example.c  libetm.h  misc.c  misc.h  str_mem.c  str_mem.h  tcp_socket.c  tcp_socket.h  win32_specific.c  win32_specific.h
tmp/tickr-0.7.1/src/tickr/: Makefile-tickr-linux  Makefile-tickr-win32  Makefile.am  Makefile.in  tickr.h  tickr_check4updates.c  tickr_clock.c  tickr_connectwin.c  tickr_error.c  tickr_error.h  tickr_feedparser.c  tickr_feedpicker.c  tickr_helptext.c  tickr_html_entities.h  tickr_http.c  tickr_list.c  tickr_list.h  tickr_main.c  tickr_misc.c  tickr_opml.c  tickr_otherwins.c  tickr_params.c  tickr_prefwin.c  tickr_quickfeedpicker.c  tickr_quicksetup.c  tickr_render.c  tickr_resource.c  tickr_tls.c  tickr_tls.h
tmp/tickr-0.7.1/win32_install_stuff/: .gtkrc-2.0  LICENSE  README_gui_font  README_required_dlls  build-win32-installer  installer.iss
tmp/tickr-0.7.1/xlib_stuff/: test_x_pixmap_max_width.c  win-config.c  xlib-prog.c
