[package]
name = "xfce4-panel-news-ticker-plugin"
version = "0.1.0"
edition = "2021"
authors = ["Andrzej Bargański <a.barganski@gmail.com>"]
homepage = "https://github.com/jedrus2000/xfce4-panel-news-ticker-plugin"
repository = "https://github.com/jedrus2000/xfce4-panel-news-ticker-plugin"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rsnewstickerplugin"
crate-type = ["staticlib", "cdylib"]

[dependencies]
libc = "0.2"
gtk = "0.17.0"
gtk-sys = "0.17.0"
gdk-pixbuf = "0.17.0"
gio = "0.17.0"
glib = "0.17.1"
glib-sys = "0.17.0"
gobject-sys = "0.17.0"
gdk-sys = "0.17.0"
gdk = "0.17.0"
rss = "2.0.2"
reqwest = { version = "0.11.14", features = ["blocking"] }
shrinkwraprs = "0.3.0"
